update linkedin Commit

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <p class="lead mb-5" align="justify">I'm currently an undergrad student in the Department of Computer Science at K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In past year, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/ronak-vadhaiya-66166a180/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/Rac-Ro007">
