--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="author" content="">
 
   <title>It's About Me</title>
-
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/py.jpg"/>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Favicon -->
@@ -81,7 +82,7 @@
           <a href="#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/ronak.vadhaiya?ref=bookmarks">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -92,49 +93,38 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-
+        <h2 class="mb-5">Experience & Internship</h2>
+        <hr width="100%">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Linux Software Intern</h3>
+            <div class="subheading mb-3">GITSS - GNU IT Solutions & Services </div>
+            <p align="justify">Working and Improvising on Linux aspects solutions for core problems. Also Learning an hands on different technologies such as Big Data, Linux Administration, Hadoop Ecosystem, Data Analytics, Databases, Networking.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">September 2018 - Present</span>
           </div>
         </div>
-
+        <hr width="95%">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <div class="subheading mb-3">K.J. Somaiya College of Engineering</div>
+            <p align="justify">An internal Internship for building up an Internhsip Portal for the college, which helps the students to search & apply for the internship without going through the hassle documented approach. This Portal also helps faculty to float and Internship admin to float internship(internal / external) for students periodically.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">December 2018 - March 2018</span>
+          </div>
+        </div>
+        <hr width="95%">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Ethical Hacking Intern</h3>
+            <div class="subheading mb-3">ELAN - IIT Hyderabad and Azure Skynet</div>
+            <p align="justify">A intensive training and project building one month internship which included 10 Training Days and 20 days for building up the project proposed by Azure Skynet on Cyber Security - Ethical Hacking</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2018 - July 2018</span>
           </div>
         </div>
 
@@ -147,29 +137,42 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
+        <hr width="100%">
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">K.J. Somaiya College of Engineering</h3>
+              <div class="subheading mb-3">Bachelor of Technology</div>
+              <div>Computer Science</div>
+              <p>CGPA: 8.16</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2017 - Present</span>
+            </div>
+          </div>
+          <hr width="95%">
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Vidyalankar Polytechnic</h3>
+              <div class="subheading mb-3">Diploma</div>
+              <div>Computer Science</div>
+              <p>Percentage: 89.75%</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2014 - June 2017</span>
+            </div>
+          </div>
+          <hr width="95%">
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Shree N.D Bhuta High School</h3>
+              <div class="subheading mb-3">Grade X</div>
+              <p>Percentage: 83.80%</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">June 2013 - June 2014</span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -179,63 +182,49 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
+        <hr width="100%">
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
+       <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+       <hr width="95%">
+          <ul class="list-inline dev-icons">
+            <li class="list-inline-item">
+              <i class="fab fa-python"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-java"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-android"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-html5"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-css3-alt"></i>
+            </li>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
+          </ul>
+          <hr width="100%">
+          <div class="subheading mb-3">Competencies</div>
+          <hr width="95%">
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Django - Web Development</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Android App Development &amp; Debugging</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Blockchain Technology</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Linux Administration &amp; Networking</li>
+          </ul>
+        </br>
+        <hr width="100%">
+          <div class="subheading mb-3">Check all my projects on my <a href="http://www.github.com/Rac-Ro007" target="_blank">Github.</a></div>
+
     </section>
 
     <hr class="m-0">
@@ -243,8 +232,10 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <hr width="100%">
+        <p align="justify">Apart from being a developer, I enjoy most of my time being outdoors. I am Passionate in Karate and hence i give sometime to train myself and practice karate to keep my body fit and take part in competition regualarly</p>
+        <hr width="95%">
+        <p class="mb-0" align="justify">When forced indoors, I follow a number of sci-fi and fantasy genre movies including Anime's in it, and I spend a large amount of my free time exploring the latest technology advancements in the world.</p>
       </div>
     </section>
 
@@ -253,33 +244,40 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <hr width="100%">
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Place in Smart India Hackthon (SIH) 2018-2019 under thee complex category, winning the cash prize of Rs. 1,00,000</li>
+          <hr width="100%">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            2nd Degree Black Belt for Karate Assocaition of India (KAI) &amp; Nihonsiki Karate &amp; Sports Federation (NKSF)</li>
+          <hr width="100%">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            Achieved 93% in MS-CIT in the year 2011-2012</li>
+          <hr width="100%">
           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Python Learning - SoloLearn</li>
+          <hr width="100%">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            DJango - Web Development with Python - Udemy</li>
+            <hr width="100%">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Unity App Development - Udemy</li>
+          <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             Place - James Buchanan High School - Hackathon 2006</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Place - James Buchanan High School - Hackathon 2005</li> -->
         </ul>
       </div>
     </section>
