Experience added + color update

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
@@ -119,6 +122,33 @@
       <div class="w-100">
         <h2 class="mb-5">Experience & Internships</h2>
         <hr width="100%">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Full Stack Engineer / Product Engineer</h3>
+            <div class="subheading text-primary mb-3">Plaza Technologies Inc., Mumbai, India</div>
+            <ul class="fa-ul mb-0" style="margin-left: 0em;" align="justify" >
+              <li>
+                <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              Developed django restful services for scalable backend with docker workflow in CI / CD environment, integrated apps such
+              as Twilio, Shopify, for ecommerce & video, email functionality. Created asynchronous tasks with celery, redis & memcache.
+              </li>
+              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              Developed front-end interfaces in react & configured elasticsearch with the product to increase search efficiency to 85%.
+              </li>
+              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              Built and deployed docker images into their respective environments in AWS EKS & EC2 instance in different regions.
+              </li>
+              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              Build and Scheduled AWS Lambda functions to trigger various AWS Resources; also developed a serverless handler.
+              </li>
+            </ul>
+            <p align="justify">Worked on creating live shopable video experienced ecommerce. </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - Present</span>
+          </div>
+        </div>
+        <hr width="95%">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Full Stack Developer Intern</h3>
@@ -360,8 +390,46 @@
           <img src="https://github-readme-stats.vercel.app/api?username=Rac-Ro007&show_icons=true&theme=algolia" height="" />
           <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rac-Ro007&layout=compact" height="" /> -->
 
-
+      </div>
     </section>
+
+    <!-- <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-3">Projects</h2>
+
+        <h4 class="text-primary">Here are some of the projects I have worked on during my undergrad🚀</h4>
+        
+        <hr width="100%">
+        <br>
+
+        <div class="row">
+          <div class="col-md-6">
+            <a href="https://github.com/Rac-Ro007/cropait">
+              <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=Rac-Ro007&repo=cropait&show_owner=true" />
+            </a>
+          </div>
+          <div class="col-md-6">
+            <a href="https://github.com/Rac-Ro007/D-File">
+              <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=Rac-Ro007&repo=D-File" />
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <a href="https://github.com/Rac-Ro007/KJSCE-internship-portal">
+              <img align="center" src="https://github-readme-stats.vercel.app/api/pin/?username=Rac-Ro007&repo=KJSCE-internship-portal" />
+            </a>
+          </div>
+        </div>        
+        
+          <div class="subheading mb-3">Check all my projects on my <a href="http://www.github.com/Rac-Ro007" target="_blank">Github.</a></div>
+          <img src="https://github-readme-stats.vercel.app/api?username=Rac-Ro007&show_icons=true&theme=algolia" height="" />
+          <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rac-Ro007&layout=compact" height="" /> 
+      <div>
+    </section> -->
 
     <hr class="m-0">
 
