fixed height of wrapper

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="w-100">
         <h2 class="mb-0 text-primary">Hey, I'm
         </h2>
-        <h2>
+        <h2 style="height: 60px;">
         <a style="color:orange ! important" href="" class="typewrite" data-period="2000" data-type='[ "Ronak Vadhaiya", "a Developer", "a CS Graduate","and a FreeLancer" ]'>
           <span class="wrap"></span>
         </a>
@@ -130,7 +130,7 @@
               <li>
                 <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
               Developed django restful services for scalable backend with docker workflow in CI / CD environment, integrated apps such
-              as Twilio, Shopify, for ecommerce & video, email functionality. Created asynchronous tasks with celery, redis & memcache.
+              as Twilio, Shopify, for ecommerce & video, email functionality. Created asynchronous tasks with celery & redis.
               </li>
               <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
               Developed front-end interfaces in react & configured elasticsearch with the product to increase search efficiency to 85%.
@@ -142,7 +142,6 @@
               Build and Scheduled AWS Lambda functions to trigger various AWS Resources; also developed a serverless handler.
               </li>
             </ul>
-            <p align="justify">Worked on creating live shopable video experienced ecommerce. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2020 - Present</span>
