--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       </h2>
         <div class="subheading mb-5">Mumbai, Maharashtra, India·
         </div>
-        <p class="lead mb-5" align="justify">I'm currently an undergrad student in the Department of Computer Science at K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In past year, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.<br><br>
-        Currently, I am looking for developer roles at an organisation which has room for learning and the same time values my contribution. <br><br>
+        <p class="lead mb-5" align="justify">I'm a grad student completed BTech in Computer Science from K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In my college years, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.<br><br>
+        Currently, I am open for developer roles at an organisation which has room for learning and the same time values my contribution. <br><br>
         Feel like hiring me. Heres my complete <a href="https://drive.google.com/file/d/18rymASyMEQVzGXZkLSR7gpxGWOMrIuGq/view?usp=sharing">Resume</a>.<br><br>I would love connecting with you :)
         </p>
         <div class="social-icons">
