updating profile pic settings and revamped resume update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ronak Vadhaiya</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 150rem ! important; max-width: 10.5rem ! important" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 150rem ! important; max-width: 13rem ! important; border-radius: 5% !important;" src="img/profile.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/18rymASyMEQVzGXZkLSR7gpxGWOMrIuGq/view?usp=sharing">Resume</a>
+          <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1JRp98ku9zc_owfK7hKYzvGOCmphuJbq9/view?usp=sharing">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -92,9 +92,9 @@
       </h2>
         <div class="subheading mb-5">Mumbai, Maharashtra, India·
         </div>
-        <p class="lead mb-5" align="justify">I'm a grad student completed BTech in Computer Science from K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In my college years, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.<br><br>
+        <p class="lead mb-3" align="justify">I'm a grad student completed BTech in Computer Science from K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In my college years, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.<br><br>
         Currently, I am open for developer roles at an organisation which has room for learning and the same time values my contribution. <br><br>
-        Feel like hiring me. Heres my complete <a href="https://drive.google.com/file/d/18rymASyMEQVzGXZkLSR7gpxGWOMrIuGq/view?usp=sharing">Resume</a>.<br><br>I would love connecting with you :)
+        Feel like hiring me. Here's my complete <a href="https://drive.google.com/file/d/1JRp98ku9zc_owfK7hKYzvGOCmphuJbq9/view?usp=sharing">Resume</a>.<br><br>I would love connecting with you :)
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ronakvadhaiya/">
@@ -105,10 +105,10 @@
           </a>
           <!-- <a href="#">
             <i class="fab fa-twitter"></i>
-          </a> -->
+          </a> 
           <a href="https://www.facebook.com/ronak.vadhaiya?ref=bookmarks">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
           <a href="mailto:ronakvadhaiya77@gmail.com">
             <i class="fas fa-envelope"></i>
           </a>
