--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <!-- Aos cdn -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -35,8 +38,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Ronak Vadhaiya</span>
-      <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 150rem ! important; max-width: 13rem ! important; border-radius: 5% !important;" src="img/profile.jpg" alt="">
+      <span class="d-none d-lg-block" data-aos="zoom-out" data-aos-delay="300">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" style="box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 1); animation: up-down 2s ease-in-out infinite alternate-reverse both; max-height: 150rem ! important; max-width: 13rem ! important; border-radius: 5% !important;" src="img/profile.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -491,6 +494,7 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script>
+  AOS.init();
   var TxtType = function(el, toRotate, period) {
         this.toRotate = toRotate;
         this.el = el;
@@ -588,7 +592,6 @@
           return (document.getElementById("blog_section").style.display = "none");
         });
       </script>
-    <script>
 </body>
 
 </html>
