--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <title>Ronak Vadhaiya</title>
   <meta name="description" content="Software Engineer, Software Developer, Freelancer">
-  <meta name="keywords" content="Python Developer, Django, Java, React JS, MERN Stack, Node JS, HTML, CSS, JavaScript">
+  <meta name="keywords" content="Python Developer, Software Engineer, Django, Java, React JS, MERN Stack, Node JS, HTML, CSS, JavaScript">
   <meta name="author" content="Ronak Vadhaiya">
   <link rel="stylesheet" href="css/index.css">
   <!-- Favicon -->
@@ -25,6 +25,8 @@
   <!-- Aos cdn -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!--Main CSS-->
+  <link rel="stylesheet" href="ravenbright.min.css">
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -48,7 +50,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1JRp98ku9zc_owfK7hKYzvGOCmphuJbq9/view?usp=sharing">Resume</a>
+          <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1IT45wcuhl0rIhbuJqs-GYTQTg-rMBuQ7/view?usp=sharing">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -71,35 +73,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="container-fluid p-0">
-     <div class="night">
-            <div class="shooting_star"></div>
-            <div class="shooting_star"></div>
-            <div class="shooting_star"></div>
-            <div class="shooting_star"></div>
-            <div class="shooting_star"></div>
-            <div class="shooting_star"></div>
-    </div>
-    <section class=" about resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
-      <div class="w-100">
-        <h2 class="mb-0 text-primary">Hey, I'm
-        </h2>
-        <h2 style="height: 60px;">
-        <a style="color:orange ! important" href="" class="typewrite" data-period="2000" data-type='[ "Ronak Vadhaiya", "a Developer", "a CS Graduate","and a FreeLancer" ]'>
-          <span class="wrap"></span>
-        </a>
-      </h2>
-        <div class="subheading mb-5">Mumbai, Maharashtra, India·
-        </div>
-        <p class="lead mb-3" align="justify">I'm a grad student completed BTech in Computer Science from K.J Somaiya College Of Engineering , Mumbai. I have always looked on academics as an interesting and critical aspect of my growing up abilities and skills. In my college years, I spent most of my time working on projects, applying for internship in various sectors and completing various courses on Machine Learning and Blockchain. I'm currently exploring the field of AI, Blockchain, Big-Data, which seems fascinating to me. I like to work on small projects during weekends to improve my skills and take part in programming contest and Hackathons regularly.<br><br>
-        Currently, I am open for developer roles at an organisation which has room for learning and the same time values my contribution. <br><br>
-        Feel like hiring me. Here's my complete <a href="https://drive.google.com/file/d/1JRp98ku9zc_owfK7hKYzvGOCmphuJbq9/view?usp=sharing">Resume</a>.<br><br>I would love connecting with you :)
-        </p>
-        <div class="social-icons">
+        <li class="social-icons nav-item p-t-5">
           <a href="https://www.linkedin.com/in/ronakvadhaiya/">
             <i class="fab fa-linkedin-in"></i>
           </a>
@@ -115,7 +89,62 @@
           <a href="mailto:ronakvadhaiya77@gmail.com">
             <i class="fas fa-envelope"></i>
           </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+     <div class="night">
+            <div class="shooting_star"></div>
+            <div class="shooting_star"></div>
+            <div class="shooting_star"></div>
+            <div class="shooting_star"></div>
+            <!-- <div class="shooting_star"></div>
+            <div class="shooting_star"></div> -->
+    </div>
+    <section class=" about resume-section p-lg-5 d-flex align-items-center" style="padding-top:2 !important;"id="about">
+      <div class="w-100">
+        <h2 class="mb-0 text-primary">👋 Hey there, I'm
+        </h2>
+        <h2 style="height: 60px;">
+        <a style="color:orange ! important" href="" class="typewrite" data-period="5000" data-type='[ "Ronak Vadhaiya", "a Software Engineer", "CS Undergrad","and a Fun Teammate" ]'>
+          <span class="wrap"></span>
+        </a>
+      </h2>
+        <div class="subheading mb-2">Boston, Massachusetts, United States·
         </div>
+        <span class="badge badge-sm bg-lime-300 border-lime-400 font-semibold m-b-6 p-x-4 flex-wrap dark-white items-center">
+
+          <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 24 24" fill="currentColor" stroke-width="2" class="ai ai-CircleFill green-600 m-r-3">
+            <circle cx="12" cy="12" r="11"></circle>
+          </svg>
+          Open for Internship Summer 2024
+        </span>
+        <p class="lead" align="justify">I'm a grad student @ Northeastern University, Boston; having 3 years of professional experience. I completed BTech in Computer Science from K.J Somaiya College Of Engineering , Mumbai. and I'm on a relentless journey through the realms of software development. Armed with a B.Tech in Computer Science, I've been immersed in the art of crafting robust systems and cutting-edge applications.<br><br>
+        </p>
+        <!-- <span class="badge badge-sm border-orange-300 bg-orange-200 font-semibold p-x-3 p-y-2 m-b-4">
+          ToolBox 🚀
+        </span> -->
+        <p> 
+        I wield a versatile arsenal of programming languages and frameworks, from Python with Django and FastAPI to full-stack prowess in JavaScript (Node.js and React.js). TypeScript is my trusty companion, ensuring code reliability and scalability. Databases are my playground. I've tamed MySQL, PostgreSQL, and MongoDB, tailoring data solutions to meet project needs. 
+        <br/><br>
+        Navigating the cloud is second nature to me, thanks to AWS (Amazon Web Services). I've deployed and harnessed cloud resources to create highly available and scalable applications throughout my tenure.
+        <!-- <span class="badge badge-sm border-blue-300 bg-blue-200 font-semibold p-x-3 p-y-2 m-b-4">
+          Beyond the Code 🚀
+        </span> -->
+        <br><br>
+        But software development isn't just about code; it's about solving complex puzzles, architecting innovative solutions, and keeping pace with industry trends. I'm here to embrace new learning adventures and explore how tech can elevate our digital world.
+
+        Join me in this exciting journey, where every line of code has the potential to shape the future. <br><br>Want to know more? Here's my 
+        <a href="https://drive.google.com/file/d/1IT45wcuhl0rIhbuJqs-GYTQTg-rMBuQ7/view?usp=sharing">
+          <!-- <span class="badge badge-sm border-blue-300 bg-blue-200 font-semibold p-x-3 p-y-2 m-b-4">
+            My Resume 🚀
+          </span>  -->My Resume 🚀
+        </a>
+           I would love connecting with you 😄 
+        </p>
+
       </div>
     </section>
 
@@ -127,27 +156,54 @@
         <hr width="100%">
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Senior Software Engineer</h3>
+            <div class="subheading text-primary mb-3">LongShot AI, Mumbai, India</div>
+            <ul class="fa-ul mb-0" style="margin-left: 0em;" align="justify" >
+              <li>
+              1) Orchestrated system-wide analytics configuration, implementing comprehensive tracking & reporting mechanisms that empowered data-driven decision-making.
+              </li>
+              <li>
+              2) Reviewed codes & tested software for bugs & operating speed, fixed bugs & documented processes to increase efficiency by 21%.
+              </li>
+              <li>
+              3) Standardize the overall backend architecture in order to account for optimizing the codebase. Segregated modules depending on size and functionality; which helped developers easier understanding of complex logics as well as created a more stream-lined and controlled environment.
+              </li>
+              <li>
+              4) Leading the team of 4 engineers constructed the integration platform in Node JS. Integrated numerous application platforms like Hubspot, Medium, Ghost, Google Word, etc.
+              </li>
+              <li>
+              5) Mentored newer engineers and gave guidance and instruction on our repositories, best practices, troubleshooting the code, as well as general career advice!
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2021 - August 2023</span>
+          </div>
+        </div>
+        <hr width="95%">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Full Stack Engineer / Product Engineer</h3>
             <div class="subheading text-primary mb-3">Plaza Technologies Inc., Mumbai, India</div>
             <ul class="fa-ul mb-0" style="margin-left: 0em;" align="justify" >
               <li>
-                <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+                <!-- <i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i> -->
               Developed django restful services for scalable backend with docker workflow in CI / CD environment, integrated apps such
               as Twilio, Shopify, for ecommerce & video, email functionality. Created asynchronous tasks with celery & redis.
               </li>
-              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              <li>
               Developed front-end interfaces in react & configured elasticsearch with the product to increase search efficiency to 85%.
               </li>
-              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              <li>
               Built and deployed docker images into their respective environments in AWS EKS & EC2 instance in different regions.
               </li>
-              <li><i class="fas fa-spinner fa-pulse fa-1x fa-fw"></i>
+              <li>
               Build and Scheduled AWS Lambda functions to trigger various AWS Resources; also developed a serverless handler.
               </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2020 - Present</span>
+            <span class="text-primary">September 2020 - September 2021</span>
           </div>
         </div>
         <hr width="95%">
@@ -222,14 +278,26 @@
         <h2 class="mb-5">Education</h2>
         <hr width="100%">
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Northeastern University, Boston</h3>
+            <div class="subheading mb-3">Master of Science</div>
+            <div>Computer Science</div>
+            <!-- <p>CGPA: </p> -->
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2023 - (Exp) May 2025</span>
+          </div>
+        </div>
+        <hr width="95%">
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">K.J. Somaiya College of Engineering</h3>
               <div class="subheading mb-3">Bachelor of Technology</div>
               <div>Computer Science</div>
-              <p>CGPA: 8.52</p>
+              <p>CGPA: 8.55</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2017 - Present</span>
+              <span class="text-primary">July 2017 - October 2020</span>
             </div>
           </div>
           <hr width="95%">
