--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
       </div>
     </section>
 
+    <!--
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
         <h2 class="mb-3">Skills</h2>
@@ -535,7 +536,7 @@
           <a href="https://grpc.io/" target="_blank" >
             <img src="https://raw.githubusercontent.com/itsksaurabh/itsksaurabh/master/assets/grpc.gif"  height="75" />
           </a>
-        -->
+        --
         <br>
         <h4 class="text-primary"> Frameworks and Other Tech's </h4> 
 
@@ -554,10 +555,10 @@
         <hr width="100%">
           <div class="subheading mb-3">Check all my projects on my <a href="http://www.github.com/Rac-Ro007" target="_blank">Github.</a></div>
           <img src="https://github-readme-stats.vercel.app/api?username=Rac-Ro007&show_icons=true&theme=algolia" height="" />
-          <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rac-Ro007&layout=compact" height="" /> -->
+           <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rac-Ro007&layout=compact" height="" /> --
 
       </div>
-    </section>
+    </section> -->
 
     <!-- <hr class="m-0">
 
